samples/_failures_safe/1761536967_870f32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d2f8121.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_3d2f8121.c:187:5: error: expected declaration or statement at end of input
  187 |     free(dist);
      |     ^~~~
